--- a/Card/index.html
+++ b/Card/index.html
@@ -5,6 +5,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="./styles.css">
     </head>
     <body>
         <body>
